# tree-gen

./: Cargo.toml  READEM.md  README.md  TEST.md  files.json  test.json
src/: main.rs
src/lib/: compare.rs  date.rs  filter.rs  generate.rs  mod.rs
src/lib_copy/: compare.rs  filter.rs  icon.rs  mod.rs  output_file.rs
