[package]
name = "tree_gen"
version = "0.1.1"
edition = "2021"
authors = ["Kei-K23 <arkar.dev.kei@gmail.com>"]
license = "MIT"
description = "tree_gen is a CLI tool to generate folder structure in ASCII, JSON and visualize folder structure with nice and easy way without leaving your terminal."
readme = "README.md"
homepage = "https://github.com/Kei-K23/tree-gen"
repository = "https://github.com/Kei-K23/tree-gen"
keywords = [ "tree_gen", "generate", "ascii", "tool", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "tree_gen"

[dependencies]
clap = "4.5.20"
colored = "2.1.0"
regex = "1.11.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
